--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "tailwindcss": "^3.0.15"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
