add zustand and get main game board working with user input

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tailwindcss": "^3.0.15"
+    "tailwindcss": "^3.0.15",
+    "zustand": "^3.6.9"
   },
   "devDependencies": {
     "@types/react": "^17.0.33",
