--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "vitest",
+    "test:ui": "vitest --ui",
     "coverage": "vitest --coverage"
   },
   "dependencies": {
@@ -17,9 +18,15 @@
     "zustand": "^3.6.9"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "@vitest/ui": "^0.1.17",
+    "jsdom": "^19.0.0",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vitest": "^0.1.16"
